Fix the broken UI issue with the list component in the 'Add asset' dialog.

--- a/dp-web/src/app/modules/dataset/views/ds-assets-list/ds-assets-list.component.scss
+++ b/dp-web/src/app/modules/dataset/views/ds-assets-list/ds-assets-list.component.scss
@@ -88,22 +88,100 @@
   height:100%;
 }
 
+.listCont .list .listRow .nameCol.hlink {
+  color: $eastern-blue;
+  cursor: pointer;
+}
 
-.listCont .sourceCol > span {
+.listCont .list .listRow.listHead,
+.listCont .list .listRow.listHead .nameCol{
+  text-transform: uppercase;
+  color: $dusty-gray;
+  font-size: 12px;
+}
+.listCont .list .listRow {
+  clear: both;
+  height: 34px;
+  line-height: 33px;
+  color: $dove-gray;
+  border-top: 1px solid $iron;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-bottom: none;
+  transition-duration: 0.28s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color;
+}
+.listCont .list .listRow:last-child {
+  border-bottom: 1px solid $iron;
+}
+
+.listCont .list .listRow:hover {
+  background-color: $data-table-hover-color;
+  border-color: $blizzard-blue;
+}
+
+.listCont .list .listRow:hover + .listRow {
+  border-top-color: $blizzard-blue;
+}
+
+.listCont .list .listRow.listHead,
+.listCont .list .listRow.listHead:hover {
+  background: transparent;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+.listCont .list .listRow.disabled {
+  color: $iron;
+}
+.listCont .list .listRow .col {
+  width:15%;
+  margin:0px 2%;
+  overflow: hidden;
+  white-space:nowrap ;
+  text-overflow: ellipsis;
+  float: left;
+}
+.listCont .list.withDsNameCom .listRow .col{
+  width:11%;
+}
+.listCont .list .listRow .col.ownerCol {
+  width:10%;
+}
+
+.listCont .list .listRow .col.descCol {
+  width:40%;
+}
+.listCont .list.withDsNameCom .listRow .col.descCol {
+  width:34%;
+}
+
+.listCont .list .listRow .checkboxCont,
+.listCont .list.withDsNameCom .listRow .starCol {
+  width:3%;
+  margin:0px;
+  text-align: center;
+}
+.listCont .list .listRow .noRowsCol {
+  text-align: right;
+}
+
+.listCont .list .listRow .sourceCol > span {
   text-transform: uppercase;
   font-size: 12px;
 }
-.listCont .hiveCol > span {
+.listCont .list .listRow .hiveCol > span {
   color:white;
   background-color: $dove-gray;
   padding:3px 8px 2px;
   border-radius: 3px;
 }
-.listCont .disabled .hiveCol > span {
+.listCont .list .listRow.disabled .hiveCol > span {
   background-color: $iron;
 }
 
-.listCont .listRow .filesCol > span {
+.listCont .list .listRow .filesCol > span {
   color:white;
   background-color: $dove-gray;
   padding:3px 8px 2px;
@@ -136,4 +214,25 @@
 .starExplanation {
   float:left;
   margin-top:-30px;
+}
+
+.search-input {
+  position: relative;
+  display: inline-block;
+  margin-right: 10px;
+  width: 250px;
+  box-sizing: border-box;
+  float: right;
+
+  input {
+    width: 100%;
+    box-sizing: border-box;
+  }
+  .dp-input__icon {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: #666666;
+    font-size: 14px;
+  }
 }
